--- a/src/templates/modal-window.hbs
+++ b/src/templates/modal-window.hbs
@@ -1,13 +1,23 @@
-<button type="button" class="modal-button" data-action="close-modal"></button>
+<svg class="modal-button" aria-label="close-button">
+    <use href="../images/symbol-defs.svg#icon-cancel"></use>
+</svg>
+
 <div class="poster-box">
-    <img class="poster film-pic" src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/{{poster_path}}"
-        alt="a poster to {{title}} film">
+
+    {{#if poster_path}} <img class="poster film-pic"
+        src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/{{poster_path}}" alt="a poster to {{title}} film">
+    {{else}} <img class="poster film-pic"
+        src="https://www.genius100visions.com/wp-content/uploads/2017/09/placeholder-vertical.jpg"
+        alt="no poster availiable to {{title}} film"> {{/if}}
+
     <div class="trailer-box-svg">
         <svg class="trailer-box-svg-on" data-id="{{id}}">
             <use href=" ../images/symbol-defs.svg#icon-play3"></use>
         </svg>
     </div>
+
 </div>
+
 <div class="film-data">
     <p class="film-title">{{title}}</p>
 
@@ -19,7 +29,12 @@
                 {{/if}}
             </td>
             <td id="col2" class="film-info-data">
-                <span class="film-info-data vote-average">{{vote_average}}</span> / {{ vote_count}}
+
+                {{#if vote_average}}
+                <span class="film-info-data vote-average">{{vote_average}}</span>
+                {{/if}}
+
+                / {{ vote_count}}
             </td>
         </tr>
         <tr>
@@ -47,13 +62,19 @@
             <td class="film-info-data">{{#each genres}}{{name}}, {{/each}}</td>
         </tr>
         <tr>
-            <td class="film-info genre">
+            <td class="film-info-trailer">
+                <button class="button button-trailer" data-id="{{id}}">
+                    <svg class="trailer-svg">
+                        <use href="../images/symbol-defs.svg#icon-play3"></use>
+                    </svg>
+                    <span class="btn-text">play trailer</span>
+                </button>
             </td>
-            <td class="film-info-share">
 
+            <td class="film-info-social">
                 <a href="https://www.facebook.com/sharer.php?display=page&u=https://www.themoviedb.org/movie/{{id}}&amp;text=Would%20you%20like%20to%20watch%20this%20movie%3F%20"
                     class="fb-btn" rel="nofollow" target="_blank">
-                    <span class="fb-label">f</span></a>
+                    <span class="fb-icon"></span></a>
 
                 <a href="https://t.me/share?url=https://www.themoviedb.org/movie/{{id}}&amp;text=Would%20you%20like%20to%20watch%20this%20movie%3F%20"
                     class="tgme-btn" rel="nofollow" target="_blank">
@@ -62,16 +83,11 @@
                 <a href="https://api.whatsapp.com/send?text=https://www.themoviedb.org/movie/{{id}}&amp;text=Would%20you%20like%20to%20watch%20this%20movie%3F%20"
                     class="whatsapp-btn" rel="nofollow" target="_blank">
                     <span class="whatsapp-icon"></span></a>
-
             </td>
+
         </tr>
     </table>
-    <button class="button button-trailer" data-id="{{id}}">
-        <svg class="trailer-svg">
-            <use href="../images/symbol-defs.svg#icon-play3"></use>
-        </svg>
-        <span class="btn-text">play trailer</span>
-    </button>
+
 
     <div class="film-about">
         <p class="film-about-title">
