--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,10 @@ a {
   margin: 0 auto;
 }
 
+.sumbit-button {
+  background: transparent;
+}
+
 @import "./components/header/header.css";
 @import "./components/modal-window/modal-window.css";
 @import "./components/main-section/main-section.css";
