--- a/src/templates/movie-card.hbs
+++ b/src/templates/movie-card.hbs
@@ -4,7 +4,7 @@
 
     <p class="title">{{title}}</p>
 
-    <p class="title accent-color">{{genre_ids}}<span> | </span>{{release_date}}
+    <p class="title accent-color">{{genres}}<span> | </span>{{release_date}}
         {{#if vote_average}}
         <span class="vote-average">{{vote_average}}</span>
         {{/if}}
