Revert "раздвинула кнопки в хедере"
This reverts commit ed20b7b6e0b5dd0cac3e55c0d741a79e4cdf09e4.

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -255,10 +255,6 @@ body {
   .header-nav-list-item:first-child {
     margin-right: 10px;
   }
-
-  .button:last-child {
-    margin-left: 15px;
-  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1200px) {
@@ -291,9 +287,6 @@ body {
     width: 340px;
     margin: 0 auto;
   }
-  .button {
-    margin-left: 19px;
-  }
 }
 @media screen and (min-width: 1200px) {
   .header-home-background {
@@ -321,9 +314,6 @@ body {
   .search {
     width: 340px;
     margin: 0 auto;
-  }
-  .button {
-    margin-left: 19px;
   }
 }
 /* ------------------hidden content---------------- */
@@ -354,6 +344,7 @@ body {
 }
 .film-overlay .button:first-child {
   margin-bottom: 15px;
+  margin-right: 0;
 }
 .film-overlay .button {
   pointer-events: all;
