--- a/src/templates/modal-window.hbs
+++ b/src/templates/modal-window.hbs
@@ -24,7 +24,7 @@
     <table class="film-info-box">
         <tr>
             <td id="col1" class="film-info vote">
-                {{#if langSearch }} Rating / Votes
+                {{#if lang }} Rating / Votes
                 {{else}} Рейтинг / Голоса
                 {{/if}}
             </td>
@@ -39,7 +39,7 @@
         </tr>
         <tr>
             <td class="film-info pop">
-                {{#if langSearch }} Popularity
+                {{#if lang }} Popularity
                 {{else}} Популярность
                 {{/if}}
             </td>
@@ -47,7 +47,7 @@
         </tr>
         <tr>
             <td class="film-info orig">
-                {{#if langSearch }} Original Title
+                {{#if lang }} Original Title
                 {{else}} Оригинальное название
                 {{/if}}
             </td>
@@ -55,7 +55,7 @@
         </tr>
         <tr>
             <td class="film-info genre">
-                {{#if langSearch }} Genre
+                {{#if lang }} Genre
                 {{else}} Жанр
                 {{/if}}
             </td>
@@ -80,6 +80,7 @@
                     class="tgme-btn" rel="nofollow" target="_blank">
                     <span class="tgme-icon"></span></a>
 
+
                 <a href="https://api.whatsapp.com/send?text=https://www.themoviedb.org/movie/{{id}}&amp;text=Would%20you%20like%20to%20watch%20this%20movie%3F%20"
                     class="whatsapp-btn" rel="nofollow" target="_blank">
                     <span class="whatsapp-icon"></span></a>
@@ -92,7 +93,7 @@
             <use href="../images/symbol-defs.svg#icon-play3"></use>
         </svg>
         <span class="btn-text">
-            {{#if langSearch }} play trailer
+            {{#if lang}} play trailer
             {{else}} трейлер
             {{/if}}
 
@@ -101,7 +102,7 @@
 
     <div class="film-about">
         <p class="film-about-title">
-            {{#if langSearch }}
+            {{#if lang }}
             ABOUT
             {{else}} О фильме
             {{/if}}
@@ -113,7 +114,7 @@
     <div class="user-action-buttons">
 
         <button class="buttons action-watch active" type="button">
-            {{#if langSearch }}
+            {{#if lang }}
             add to Watched
             {{else}} добавить к просмотренным
             {{/if}}
@@ -121,7 +122,7 @@
 
 
         <button class="buttons action-queue" type="button">
-            {{#if langSearch }}
+            {{#if lang}}
             add to queue
             {{else}} добавить в очередь
             {{/if}}
