--- a/src/components/main-section/main-section.css
+++ b/src/components/main-section/main-section.css
@@ -75,7 +75,18 @@
   object-fit: cover;
 }
 
+.search-error {
+  margin: 0 auto;
+  max-width: 320px;
+  height: auto;
+}
+
 @media screen and (min-width: 768px) {
+  .search-error {
+    max-width: 768px;
+    height: auto;
+  }
+
   .container {
     max-width: 768px;
     padding: 0 76px;
