--- a/src/templates/pagination.hbs
+++ b/src/templates/pagination.hbs
@@ -1,13 +1,13 @@
 <div class="paginator">
-  <button class="btn-page prev" data-index="1">&larr;</button>
-  <button class="btn-first btn" data-index="1">1</button>
-  <button class="btn-dots dots1" data-index="1">...</button>
-  <button class="btn-page1 active btn" data-index="1">1</button>
+  <button class="btn-page prev">&larr;</button>
+  <button class="btn-first btn">1</button>
+  <button class="btn-dots dots1">...</button>
+  <button class="btn-page1 btn" data-index="1">1</button>
   <button class="btn-page2 btn" data-index="2">2</button>
   <button class="btn-page3 btn" data-index="3">3</button>
   <button class="btn-page4 btn" data-index="4">4</button>
   <button class="btn-page5 btn" data-index="5">5</button>
-  <button class="btn-dots dots2" data-index="1">...</button>
-  <button class="btn-last btn" data-index="{{totalPages}}">{{totalPages}}</button>
-  <button class="btn-page next" data-index="1">&rarr;</button>
+  <button class="btn-dots dots2">...</button>
+  <button class="btn-last btn" data-index="{{total_pages}}">{{total_pages}}</button>
+  <button class="btn-page next">&rarr;</button>
 </div>
