--- a/src/styles.css
+++ b/src/styles.css
@@ -49,3 +49,4 @@ a {
 @import "./components/pagination/pagination.css";
 @import "./components/footer/footer.css";
 @import "./components/theme-switch/theme-switch.css";
+@import "./components/up-to/up-to.css";
