--- a/src/templates/modal-window.hbs
+++ b/src/templates/modal-window.hbs
@@ -59,8 +59,7 @@
                 {{else}} Жанр
                 {{/if}}
             </td>
-            <td class="film-info-data genre">{{#each genres}}<span class="film-info-data-genre"> {{name}}
-                </span>{{/each}}
+            <td class="film-info-data genre"><span class="film-info-data-genre">{{genres}}</span>
             </td>
         </tr>
         <tr>
