--- a/src/components/up-to/up-to.css
+++ b/src/components/up-to/up-to.css
@@ -1,8 +1,33 @@
 .to-up {
   position: fixed;
-  bottom: 28px;
-  right: 28px;
+  bottom: 20px;
+  right: 10px;
   display: none;
   z-index: 22;
   cursor: pointer;
+}
+
+.up-to-svg {
+  width: 30px;
+  height: 30px;
+  fill: rgba(255, 107, 1, 0.5);
+}
+
+.up-to-svg:hover {
+  fill: #ff6b01;
+}
+
+@media screen and (min-width: 768px) {
+  .to-up {
+    bottom: 7px;
+    right: 65px;
+  }
+  .up-to-svg {
+    width: 50px;
+    height: 50px;
+  }
+  .up-to-svg:hover {
+    fill: #ff6b01;
+    transform: scale(1.2);
+  }
 }
