--- a/src/components/up-to/up-to.css
+++ b/src/components/up-to/up-to.css
@@ -10,14 +10,25 @@
 .up-to-svg {
   width: 30px;
   height: 30px;
-  fill: rgba(255, 107, 1, 0.5);
-}
-
-.up-to-svg:hover {
   fill: #ff6b01;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .to-up {
+    bottom: 8px;
+    right: 20px;
+  }
+  .up-to-svg {
+    width: 50px;
+    height: 50px;
+  }
+
+  .up-to-svg {
+    fill: #ff6b01;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .to-up {
     bottom: 7px;
     right: 65px;
@@ -25,6 +36,10 @@
   .up-to-svg {
     width: 50px;
     height: 50px;
+  }
+
+  .up-to-svg {
+    fill: rgba(255, 107, 1, 0.5);
   }
   .up-to-svg:hover {
     fill: #ff6b01;
