--- a/src/components/main-section/main-section.css
+++ b/src/components/main-section/main-section.css
@@ -79,6 +79,8 @@
   margin: 0 auto;
   max-width: 320px;
   height: auto;
+  user-select: none;
+  pointer-events: none;
 }
 
 @media screen and (min-width: 768px) {
