--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,4 @@
 @import "./components/footer/footer.css";
 @import "./components/theme-switch/theme-switch.css";
 @import "./components/up-to/up-to.css";
+@import "./components/film-overlay/film-overlay.css";
