--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,4 @@
 /* -------------HEADER---------------- */
-
 .header {
   width: 100%;
   height: 230px;
@@ -45,6 +44,10 @@
   display: flex;
   align-items: baseline;
   user-select: none;
+}
+.icon-home {
+  width: 25px;
+  height: 25px;
 }
 .header-nav-logo a {
   text-decoration: none;
@@ -119,7 +122,6 @@
   background-position: center;
   border-radius: 50%;
 }
-
 /* ----------------------------------------------search------------------------------------------------------- */
 .search {
   width: 280px;
@@ -145,19 +147,6 @@
   margin-top: 4px;
   background-color: white;
 }
-/* .search::before {
-  content: "";
-  display: block;
-  width: 12px;
-  height: 12px;
-  background: transparent;
-  background-image: url("../../images/header/search.svg");
-  position: absolute;
-  right: 0;
-  top: 5px;
-  cursor: pointer;
-} */
-
 .svg-button {
   background: url("../../images/header/search.svg") no-repeat;
   width: 12px;
@@ -170,11 +159,9 @@
   top: 5px;
   cursor: pointer;
 }
-
 .svg-button:hover {
   transform: scale(1.5);
 }
-
 /* ----красиво убираем плейсхолдер инпута при фокусе------- */
 .search-input::-webkit-input-placeholder {
   text-indent: 0px;
@@ -236,16 +223,19 @@
   outline: none;
   border-radius: 5px;
   user-select: none;
+  cursor: pointer;
   background: transparent;
   border: 1px solid white;
 }
-
+.button:hover {
+  border: 1px solid #ff6b01;
+  box-shadow: inset 1px 1px 10px rgb(255, 166, 124), 1px 1px 5px rgb(221, 9, 9);
+}
 .button-active {
   background: #ff6b01;
   border: 1px solid #ff6b01;
   box-shadow: inset 5px 5px 10px rgb(255, 166, 124), 1px 1px 5px rgb(221, 9, 9);
 }
-
 /* ------------------MEDIA------------------ */
 @media screen and (min-width: 320px) and (max-width: 768px) {
   .header-nav-logo-title {
@@ -268,7 +258,6 @@
     margin-right: 10px;
   }
 }
-
 @media screen and (min-width: 768px) and (max-width: 1200px) {
   .header-home-background {
     background-image: linear-gradient(
@@ -332,42 +321,7 @@
 .hidden {
   display: none;
 }
-/* ------------------/hidden content---------------- */
-/* ------------------Film overlay + overlay buttons---------------- */
-
-.film-overlay {
-  width: 234px;
-  height: 370px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-image: linear-gradient(
-    to right,
-    rgba(0, 0, 0, 0.5),
-    rgba(0, 0, 0, 0.5)
-  );
-  position: absolute;
-  border-radius: 5px;
-  cursor: pointer;
-  overflow: show;
-  user-select: none;
-  pointer-events: none;
-}
-.film-overlay .button:first-child {
-  margin-bottom: 15px;
-  margin-right: 0;
-}
-.film-overlay .button {
-  pointer-events: all;
-  cursor: pointer;
-}
-/* ------------------/Film overlay + overlay buttons---------------- */
-.icon-home {
-  width: 25px;
-  height: 25px;
-}
-
+/* ============== media for hide overlay on screen >1200px */
 @media screen and (min-width: 320px) and (max-width: 1199px) {
   .film-overlay {
     display: none;
