--- a/src/templates/modal-window.hbs
+++ b/src/templates/modal-window.hbs
@@ -101,17 +101,7 @@
             {{else}} О фильме
             {{/if}}
         </p>
-        <p class="film-about-text">
-
-            {{#if overview}} {{overview}}
-            {{else}} Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi impedit pariatur
-            nisi iure nostrum sint similique voluptas ab alias rerum corrupti tenetur itaque
-            beatae nihil natus vel accusantium adipisci optio error, labore sed consequatur
-            voluptatibus? Necessitatibus enim porro distinctio voluptatum impedit atque
-            cumque accusamus, aut laudantium fuga obcaecati velit eum.
-            {{/if}}
-
-        </p>
+        <p class="film-about-text"> {{overview}} </p>
     </div>
 
     <div class="user-action-buttons">
