Исправила цвет кнопок
Оставила по умолчанию на модальном окне Add to watched оранжевого цвета

Убрала изменение цвета на кнопках при mouseover на главной странице

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -18,8 +18,8 @@
   border: 1px solid #ff6b01;
   box-shadow: inset 1px 1px 10px rgb(255, 166, 124), 1px 1px 5px rgb(221, 9, 9);
 }
-.button-active {
+/* .button-active {
   background: #ff6b01;
   border: 1px solid #ff6b01;
   box-shadow: inset 5px 5px 10px rgb(255, 166, 124), 1px 1px 5px rgb(221, 9, 9);
-}
+} */
