remove class active^ add hover to play button

--- a/src/templates/modal-window.hbs
+++ b/src/templates/modal-window.hbs
@@ -106,7 +106,7 @@
 
     <div class="user-action-buttons">
 
-        <button class="buttons action-watch active" type="button">
+        <button class="buttons action-watch" type="button">
             {{#if lang }}add to Watched
             {{else}} добавить к просмотренным
             {{/if}}
