--- a/src/components/trailer/trailer.css
+++ b/src/components/trailer/trailer.css
@@ -163,6 +163,7 @@
       transform: scale(1.2) translate(-40%, -40%);
       transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
       transition-duration: 250ms;
+      fill: #ff6b01;
     }
   }
 }
