--- a/src/components/film-overlay/film-overlay.css
+++ b/src/components/film-overlay/film-overlay.css
@@ -24,7 +24,9 @@
   pointer-events: all;
   cursor: pointer;
 }
-.film-overlay .button:hover {
-  border: 1px solid #ff6b01;
-  box-shadow: inset 1px 1px 10px rgb(255, 166, 124), 1px 1px 5px rgb(221, 9, 9);
+
+@media screen and (min-width: 320px) and (max-width: 1199px) {
+  .film-overlay {
+    display: none;
+  }
 }
