pagination dark theme fix

--- a/src/components/theme-switch/theme-switch.css
+++ b/src/components/theme-switch/theme-switch.css
@@ -31,6 +31,15 @@ body.dark-theme {
   color: #fff;
 }
 
+.theme.light-theme {
+  color: black;
+}
+
+.theme.dark-theme {
+  background-color: transparent;
+  color: #fff;
+}
+
 .toolbar {
   display: flex;
   justify-content: flex-end;
