--- a/src/templates/pagination.hbs
+++ b/src/templates/pagination.hbs
@@ -1,13 +1,13 @@
 <div class="paginator">
-  <button class="btn-page prev">&larr;</button>
-  <button class="btn-first btn">1</button>
-  <button class="btn-dots dots1">...</button>
-  <button class="btn-page1 btn" data-index="1">1</button>
-  <button class="btn-page2 btn" data-index="2">2</button>
-  <button class="btn-page3 btn" data-index="3">3</button>
-  <button class="btn-page4 btn" data-index="4">4</button>
-  <button class="btn-page5 btn" data-index="5">5</button>
-  <button class="btn-dots dots2">...</button>
-  <button class="btn-last btn" data-index="{{total_pages}}">{{total_pages}}</button>
-  <button class="btn-page next">&rarr;</button>
+  <button class="btn-page prev theme">&larr;</button>
+  <button class="btn-first btn theme">1</button>
+  <button class="btn-dots dots1 theme">...</button>
+  <button class="btn-page1 btn theme" data-index="1">1</button>
+  <button class="btn-page2 btn theme" data-index="2">2</button>
+  <button class="btn-page3 btn theme" data-index="3">3</button>
+  <button class="btn-page4 btn theme" data-index="4">4</button>
+  <button class="btn-page5 btn theme" data-index="5">5</button>
+  <button class="btn-dots dots2 theme">...</button>
+  <button class="btn-last btn theme" data-index="{{total_pages}}">{{total_pages}}</button>
+  <button class="btn-page next theme">&rarr;</button>
 </div>
