team-modal finished

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -25,7 +25,9 @@
   margin-right: 10px;
 }
 .footer-developed-students {
+  cursor: pointer;
   text-decoration: underline;
+  user-select: none;
 }
 
 @media screen and (max-width: 319px) {
