--- a/src/styles.css
+++ b/src/styles.css
@@ -16,3 +16,4 @@
 @import "./components/theme-switch/theme-switch.css";
 @import "./components/up-to/up-to.css";
 @import "./components/film-overlay/film-overlay.css";
+@import "./components/team-modal/team-modal.css";
